<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">



    <item
        android:id="@+id/action_upload"
        android:orderInCategory="180"
        android:title="@string/upload"
        android:icon="@drawable/ic_file_upload_black_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="190"
        android:title="@string/share"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:title="@string/help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        app:showAsAction="ifRoom" />

</menu>
