<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.chromium.latency.walt.TapLatencyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_restart_drag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/button_tint"
                app:srcCompat="@drawable/ic_refresh_black_24dp"
                android:contentDescription="@string/restart" />

            <ImageButton
                android:id="@+id/button_start_drag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/button_tint"
                app:srcCompat="@drawable/ic_play_arrow_black_24dp"
                android:contentDescription="@string/start" />

            <ImageButton
                android:id="@+id/button_finish_drag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/button_tint"
                app:srcCompat="@drawable/ic_check_black_24dp"
                android:contentDescription="@string/finish" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_cross_counts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#000000"
                        android:padding="4dp"
                        android:text=""

                        android:textColor="#00ff00" />

                    <TextView
                        android:id="@+id/txt_drag_counts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#000000"
                        android:padding="4dp"
                        android:text=""

                        android:textColor="#ff0000" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/latency_chart_layout"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/border">

                    <com.github.mikephil.charting.charts.ScatterChart
                        android:id="@+id/latency_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp" />

                    <Button
                        android:id="@+id/button_close_chart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/latency_chart"
                        android:layout_alignTop="@id/latency_chart"
                        android:tint="@color/button_tint"
                        android:layout_margin="5dp"
                        android:text="@string/close" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_log_drag_latency"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:gravity="bottom"
                    android:textColor="#ffffff"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <!-- Overlay semi-transparent view that catches the touch events -->
            <org.chromium.latency.walt.TouchCatcherView
                android:id="@+id/tap_catcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#01000000" />

        </FrameLayout>
    </LinearLayout>
</FrameLayout>
